<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, main!</string>
    <string name="app_name">trackerApp</string>
    <string name="send_location_once">Send location</string>
    <string name="frequency">Frequency</string>
    <string name="apikey">API Key</string>
    <string name="save">Save</string>
    <string name="startUpdate">Start Updater</string>
    <string name="stopUpdate">Stop Updater</string>
</resources>
