<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/settings"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical">
	<TextView 
		android:id="@+id/textView1" 
		android:layout_height="wrap_content"
		android:layout_width="wrap_content" android:text="@string/frequency"></TextView>
	<TextView 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:id="@+id/txtTest" 
		android:text="asd"></TextView>
	<SeekBar 
		android:id="@+id/seekFreq" 
		android:layout_height="wrap_content"
		android:layout_width="match_parent" ></SeekBar>
	<TextView android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_width="match_parent" android:paddingTop="20px" android:text="@string/apikey"></TextView>
	<EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/txtApiKey" android:textSize="10dp"></EditText>
	<Button android:layout_width="wrap_content" android:text="@string/save" android:id="@+id/btnSaveSettings" android:layout_marginTop="5dp" android:layout_height="wrap_content"></Button>
	<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/btnUpdateStart" android:text="@string/startUpdate"></Button>
	<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/btnUpdateStop" android:text="@string/stopUpdate"></Button>
</LinearLayout>

